--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ h2 {
   font-size: 1.25rem;
   padding: 0.5rem;
   color: #fff;
+  margin-right: 0.5rem;
 }
 
 #navbar ul li a:hover {
@@ -69,7 +70,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.75rem;
+  padding: 0.75rem 1.75rem;
   border-radius: 40px;
   font-size: 16px;
   transition: all 0.2s ease-in-out;
@@ -80,48 +81,83 @@ h2 {
   background-color: #1b98f5;
   transition: all 0.2s ease-in-out;
 }
+.navbar-icon {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #navbar ul {
+    display: none;
+  }
+  .navbar-btn {
+    display: none;
+  }
+  .navbar-icon {
+    display: block;
+    color: white;
+    margin-right: 1rem;
+  }
+}
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto;
-  grid-gap: 0.5rem;
+  grid-template-columns: repeat(auto-fill, 300px);
+  justify-content: center;
+  grid-gap: 20px;
   overflow: hidden;
 }
-
-.card {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 250px auto;
-  grid-template-areas: image text btn;
-  margin: 1rem;
-  width: 400px;
-  height: 400px;
+.card-container {
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transition: 0.5s;
+  margin: 1rem;
+  height: 350px;
 }
 
-.card .card-image {
-  /* background: url("https://images.cnbctv18.com/wp-content/uploads/2018/03/shutterstock_281485004-768x432.jpg"); */
-  background-size: center no-repeat center/cover;
+.card-container .card-image {
+  /* background: url("https://images.news18.com/ibnlive/uploads/2021/06/1622536223_drdo.jpg"); */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 10rem;
+  width: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 
-.card .card-text {
+.card-container .card-text {
   padding: 1rem;
 }
 
-.card .card-text a {
+.card-container .card-text a {
   text-decoration: none;
   color: #333;
 }
 
-.card .card-author {
-  text-align: right;
-  margin-right: 0.5rem;
+.card-container .card-date {
+  padding-left: 1rem;
+}
+
+.card-container .card-btn {
+  position: relative;
+  display: block;
+  padding: 10px 20px;
+  background-color: #1b98f5;
+  color: #fff;
+  border-radius: 40px;
+  text-align: center;
+  margin: 1rem 2rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.card-container .card-btn:hover {
+  transition: all 0.2s ease-in-out;
+  background-color: #5da3fa;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
 }
 
 footer {
