--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@ h2 {
   color: #1b98f5;
 }
 
+#navbar .navbar-logo a {
+  text-decoration: none;
+  color: #1b98f5;
+}
+
 #navbar ul {
   display: flex;
   align-items: center;
@@ -55,6 +60,12 @@ h2 {
   padding: 0.5rem;
   color: #fff;
   margin-right: 0.5rem;
+  text-decoration: none;
+}
+
+#navbar ul li a.active {
+  color: #1b98f5;
+  border-bottom: 2px solid #1b98f5;
 }
 
 #navbar ul li a:hover {
@@ -76,13 +87,37 @@ h2 {
   transition: all 0.2s ease-in-out;
 }
 
+.angleRight {
+  margin-left: 0.5rem;
+  transition: all 0.2s ease-in-out;
+  color: #fff;
+}
+
+.arrowRight {
+  margin-left: 0.5rem;
+  transition: all 0.2s ease-in-out;
+  color: #333;
+}
+
 .navbar-btn:hover {
   color: #fff;
   background-color: #1b98f5;
   transition: all 0.2s ease-in-out;
 }
+
 .navbar-icon {
   display: none;
+}
+
+.navbar-profile-icon {
+  --button-size: 50px;
+  width: var(--button-size);
+  height: var(--button-size);
+  background-color: #484a4d;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 2px;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
@@ -97,6 +132,19 @@ h2 {
     color: white;
     margin-right: 1rem;
   }
+}
+
+.dropDown {
+  border: none;
+  font-size: 1rem;
+  outline: none;
+  padding: 1rem 2rem;
+}
+
+.home-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .grid-container {
@@ -153,7 +201,7 @@ h2 {
 
 .card-container .card-btn:hover {
   transition: all 0.2s ease-in-out;
-  background-color: #5da3fa;
+  background-color: #3944f7;
   cursor: pointer;
 }
 
