--- a/src/App.css
+++ b/src/App.css
@@ -158,13 +158,14 @@ h2 {
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
+  position: relative;
+  top: 0;
+  transition: top ease 0.8s;
   margin: 1rem;
   height: 350px;
 }
 
 .card-container .card-image {
-  /* background: url("https://images.news18.com/ibnlive/uploads/2021/06/1622536223_drdo.jpg"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -203,6 +204,10 @@ h2 {
   transition: all 0.2s ease-in-out;
   background-color: #3944f7;
   cursor: pointer;
+}
+
+.card-container:hover {
+  top: -10px;
 }
 
 @media screen and (max-width: 768px) {
