--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ h2 {
   overflow: auto;
 }
 
+.bar {
+  width: 130px;
+  height: 10px;
+  background-color: #1b98f5;
+}
+
 #navbar {
   background-color: #333;
   display: flex;
@@ -213,7 +219,56 @@ h2 {
 @media screen and (max-width: 768px) {
 }
 
-footer {
+.source,
+.about {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.source .source-title,
+.about .about-title {
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.source .source-desc,
+.source-category-desc {
+  margin-top: 0.75rem;
+  line-height: 1.5;
+  font-weight: 500;
+}
+
+.source .source-category {
+  margin-top: 0.75rem;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.source .source-category-title {
+  margin-top: 0.75rem;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.source .source-category-list ul {
+  margin-top: 0.75rem;
+  list-style: none;
+}
+
+.source .source-category-list ul li {
+  margin-top: 5px;
+}
+
+.about .about-api {
+  display: block;
+  padding: 1rem;
+  background: #ddd;
+  margin-top: 0.75rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+
+.source footer {
   background-color: #ddd;
   text-align: center;
   position: absolute;
