--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,10 @@ h2 {
   color: #fff;
 }
 
+.sidebar-container {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   #navbar ul {
     display: none;
@@ -134,9 +138,51 @@ h2 {
     display: none;
   }
   .navbar-icon {
+    position: abolute;
     display: block;
     color: white;
     margin-right: 1rem;
+    cursor: pointer;
+    z-index: 1100;
+  }
+  .sidebar-container {
+    display: grid;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    transition: 0.5s ease-in-out;
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    opacity: 0;
+  }
+
+  .sidebar-container.active {
+    opacity: 1;
+  }
+  .sidebar-container .sidebar-icon {
+    position: absolute;
+    top: 100px;
+    right: 30px;
+  }
+  .sidebar-menu-wrapper {
+    color: #fff;
+  }
+  .sidebar-menu-wrapper .sidebar-menu-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.5rem;
+    text-decoration: none;
+    list-style: none;
+    margin-top: 3rem;
+    transition: 0.5s ease-in-out;
+  }
+  .sidebar-menu-list:hover {
+    color: #1b98f5;
   }
 }
 
