--- a/src/pages/Authentication/authentication.css
+++ b/src/pages/Authentication/authentication.css
@@ -21,12 +21,11 @@ a {
 }
 
 .left {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-}
-
-.left .left-content {
-  color: #141414;
-  text-align: center;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1)),
+    url(../../images/authentication.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .right-signup {
