--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,16 @@ h2 {
   margin: 0.5rem;
 }
 
+::-webkit-scrollbar {
+  height: 4px;
+  width: 10px;
+  background: #333;
+}
+::-webkit-scrollbar-thumb:vertical {
+  background: gray;
+  border-radius: 10px;
+}
+
 .container {
   max-width: 1100px;
   margin: auto;
