--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,13 @@ h2 {
   .navbar-profile-icon {
     display: none;
   }
+
   .sidebar-container {
+    display: none;
+    z-index: -1;
+  }
+
+  .sidebar-container.active {
     display: grid;
     align-items: center;
     position: fixed;
@@ -207,10 +213,6 @@ h2 {
     transition: 0.5s ease-in-out;
     height: 100%;
     width: 100%;
-    opacity: 0;
-  }
-
-  .sidebar-container.active {
     opacity: 1;
     z-index: 1000;
   }
